Posts (index): add profile links to pic and name, add post links to title and comments, style pic. User (show): add header to past submissions, style that header

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -33,7 +33,10 @@ $secondary-green: #5cb85c;
 
 	.postUserThumb {
 		width: 44px;
+		height: 44px;
+		overflow: hidden;
 		border-radius: 22px;
+		border: 1px solid black;
 		float: left;
 	}
 
