--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -77,5 +77,9 @@ $secondary-green: #5cb85c;
 }
 
 .userPagePosts {
+	h4.postIntro {
+		margin-left: 100px;
+		margin-top: 60px;
+	}
 	margin-top: 30px;
 }
