--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
     <% @posts.each do |post| %>
         <div class="post">
           <div class="postHeader">
-            <%= link_to (image_tag post.user.image.url(:thumb), class: "postUserThumb"), user_path(post.user.id) %>
+            <%= link_to (image_tag post.user.avatar.url(:thumb), class: "postUserThumb"), user_path(post.user.id) %>
             <div class="postInfo">
               <p class="postUserName">
                 <%= link_to (post.user.first_name + " " + post.user.last_name), user_path(post.user.id) %>
