add notes to js and scss files

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
+// Main colour scheme
 $primary-brown: #600;
 $primary-green: #38761d;
 $secondary-green: #5cb85c;
