--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,3 +1,5 @@
+<!-- Not yet sure if an index for comments is necessary. Your thoughts on this would be appreciated -->
+
 <p id="notice"><%= notice %></p>
 
 <h1>Comments</h1>
