--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   <nav class="navbar navbar-fixed-top" role="navigation">
     <div class="container-fluid nav-container">
       
+      <!-- Navbar dropdown button for small screens -->
       <div class="navbar-header">
         <button type="button"
                 class="navbar-toggle"
@@ -38,8 +39,11 @@
         <ul class="nav navbar-nav navbar-right">
         	<li class="userNav"><%= button_to "New Post", new_post_path, {method: "get", :class => "btn btn-success nav-btn"} %></li>
         	<% if user_signed_in? %>
+
+          <!-- Eventually, Notifications and Messages would be a great feature, but are not yet implemented -->
           <li class="userNav"><%= link_to "Notifications", '#' %></li>
         	<li class="userNav"><%= link_to "Messages", '#' %></li>
+          
           <li class="userNav">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             Account <b class="caret"></b></a>
@@ -81,7 +85,7 @@
   <!-- FOOTER -->
   <footer>
     <div id="copyright">
-      <a href="http://physiotherapist-dog-70104.bitballoon.com/"><p>&copy; Jake Hill 2017</p></a>
+      <a href="http://jake-hill-portfolio.bitballoon.com/"><p>&copy; Jake Hill 2017</p></a>
     </div>
   </footer>
   <!-- end FOOTER -->
