add notes to posts views

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,11 +19,11 @@
     <p><%= @post.location %>, <%= @post.date_of_event %> </p>  
   </div>
 
-
-  <div class="post_likes">
-    <p>Likes: <%= @post.likes %></p>
-    <p>Dislikes: <%= @post.dislikes %></p>
-  </div>  
+  <!-- Since this feature has not yet been implemented, I'm going to comment it out -->
+  <!-- <div class="post_likes">
+    <p>Likes: <%#= @post.likes %></p>
+    <p>Dislikes: <%#= @post.dislikes %></p>
+  </div>   -->
 </div>
 
 <div class="post_comments">
