--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(post) do |f| %>
+  <!--   Produce errors if necessary -->
   <% if post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -21,7 +22,9 @@
     <%= f.text_area :content %>
   </div>
  
+
   <div class="post-options">   
+    <!-- To add Date of topic of post -->
     <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
     <div class="field hidden">
       <span class="glyphicon glyphicon-remove hidden"></span>
@@ -29,6 +32,7 @@
       <%= f.date_select :date_of_event, { :end_year => Date.today.year - 1000, :start_year => Date.today.year } %>
     </div>
     
+    <!-- To add Location of topic of post -->
     <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
     <div class="field hidden">
       <span class="glyphicon glyphicon-remove hidden"></span>
@@ -36,6 +40,7 @@
       <%= f.text_field :location, :id => 'autocomplete', :placeholder => 'Enter a location...' %>
     </div>  
 
+    <!-- To add Photo (not yet implemented) -->
     <span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
   </div>
   
