--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,16 +5,18 @@
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sort By<b class="caret"></b></a>
       <ul class="dropdown-menu">
-        <li><%= link_to "Newest(Submitted)", posts_path %></li>
-        <li><%= link_to "Oldest(Submitted)", posts_path(order: "oldSub") %></li>
-        <li><%= link_to "Newest(Event)", posts_path(order: "newEv") %></li>
-        <li><%= link_to "Oldest(Event)", posts_path(order: "oldEv") %></li>
+        <!-- Options for post order (need better wording for this, too confusing) -->
+        <li><%= link_to "Newest Submissions", posts_path %></li>
+        <li><%= link_to "Oldest Submissions", posts_path(order: "oldSub") %></li>
+        <li><%= link_to "Newest Events", posts_path(order: "newEv") %></li>
+        <li><%= link_to "Oldest Events", posts_path(order: "oldEv") %></li>
       </ul>
     </li>
     
     <% @posts.each do |post| %>
         <div class="post">
           <div class="postHeader">
+            <!-- Profile Pic -->
             <%= link_to (image_tag post.user.avatar.url(:thumb), class: "postUserThumb"), user_path(post.user.id) %>
             <div class="postInfo">
               <p class="postUserName">
