--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<!-- Eventually, this will be the area to add friends, send messages, or just browse other bloggers -->
 <p id="notice"><%= notice %></p>
 
 <h1>Users</h1>
